[project]
name = "vascularmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "geomdl>=5.3.1",
    "matplotlib>=3.7.5",
    "networkx>=3.1",
    "nibabel>=5.2.1",
    "numpy>=1.24.4",
    "pyvista>=0.44.2",
    "scipy>=1.10.1",
    "vpython>=7.6.5",
]
